设备绑定名字
